; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/tools/extr_test_get_len.c_dump_field.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/tools/extr_test_get_len.c_dump_field.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.insn_field = type { i32, i32*, i32, i32 }

@.str = private unnamed_addr constant [11 x i8] c"%s.%s = {\0A\00", align 1
@.str.1 = private unnamed_addr constant [45 x i8] c"%s\09.value = %d, bytes[] = {%x, %x, %x, %x},\0A\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"%s\09.got = %d, .nbytes = %d},\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*, %struct.insn_field*)* @dump_field to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dump_field(i32* %0, i8* %1, i8* %2, %struct.insn_field* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.insn_field*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.insn_field* %3, %struct.insn_field** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 (i32*, i8*, i8*, ...) @fprintf(i32* %9, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %10, i8* %11)
  %13 = load i32*, i32** %5, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load %struct.insn_field*, %struct.insn_field** %8, align 8
  %16 = getelementptr inbounds %struct.insn_field, %struct.insn_field* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.insn_field*, %struct.insn_field** %8, align 8
  %19 = getelementptr inbounds %struct.insn_field, %struct.insn_field* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.insn_field*, %struct.insn_field** %8, align 8
  %24 = getelementptr inbounds %struct.insn_field, %struct.insn_field* %23, i32 0, i32 1
  %25 = load i32*, i32** %24, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.insn_field*, %struct.insn_field** %8, align 8
  %29 = getelementptr inbounds %struct.insn_field, %struct.insn_field* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 2
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.insn_field*, %struct.insn_field** %8, align 8
  %34 = getelementptr inbounds %struct.insn_field, %struct.insn_field* %33, i32 0, i32 1
  %35 = load i32*, i32** %34, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 3
  %37 = load i32, i32* %36, align 4
  %38 = call i32 (i32*, i8*, i8*, ...) @fprintf(i32* %13, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0), i8* %14, i32 %17, i32 %22, i32 %27, i32 %32, i32 %37)
  %39 = load i32*, i32** %5, align 8
  %40 = load i8*, i8** %7, align 8
  %41 = load %struct.insn_field*, %struct.insn_field** %8, align 8
  %42 = getelementptr inbounds %struct.insn_field, %struct.insn_field* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 8
  %44 = load %struct.insn_field*, %struct.insn_field** %8, align 8
  %45 = getelementptr inbounds %struct.insn_field, %struct.insn_field* %44, i32 0, i32 3
  %46 = load i32, i32* %45, align 4
  %47 = call i32 (i32*, i8*, i8*, ...) @fprintf(i32* %39, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0), i8* %40, i32 %43, i32 %46)
  ret void
}

declare dso_local i32 @fprintf(i32*, i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
